build(docs): fix guide docs generation
Removed PDF and EPUB from `acl` and `cas` for now.