@@ -1,19 +1,6 @@
-buildscript {
-    repositories {
-        maven { url 'https://repo.grails.org/grails/core' }
-    }
-    dependencies {
-        classpath 'org.asciidoctor:asciidoctor-gradle-jvm:4.0.3'
-        classpath "org.asciidoctor:asciidoctor-gradle-jvm-epub:4.0.3"
-        classpath "org.asciidoctor:asciidoctor-gradle-jvm-pdf:4.0.3"
-        classpath "org.asciidoctor:asciidoctor-gradle-jvm-gems:4.0.3"
-    }
+plugins {
+    id 'org.asciidoctor.jvm.convert'
 }
-
-apply plugin: "org.asciidoctor.jvm.gems"
-apply plugin: 'org.asciidoctor.jvm.convert'
-apply plugin: "org.asciidoctor.jvm.pdf"
-apply plugin: "org.asciidoctor.jvm.epub"
 
 def asciidoctorAttributes = [
         copyright           : 'Apache License, Version 2.0',
@@ -38,15 +25,6 @@ def asciidoctorAttributes = [
         threeZeroXProjectVersion: '3.0.1'
 ]
 
-repositories {
-    ruby.gems()
-}
-
-dependencies {
-    asciidoctorGems 'rubygems:rouge:4.4.0'
-}
-
-
 asciidoctor {
     sourceDir file('src/docs')
     sources {
@@ -54,56 +32,16 @@ asciidoctor {
     }
     outputDir = new File(buildDir, 'docs')
     attributes asciidoctorAttributes
-}
-
-asciidoctorPdf {
-    dependsOn asciidoctorGemsPrepare
-    sourceDir = file('src/docs')
-    sources {
-        include 'index.adoc'
+    jvm {
+        jvmArgs '--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED', '--add-opens', 'java.base/java.io=ALL-UNNAMED'
     }
-    outputDir = new File(buildDir, 'docs')
-
-    asciidoctorj {
-        requires 'rouge'
-        attributes asciidoctorAttributes
-    }
-}
-
-asciidoctorEpub {
-    dependsOn asciidoctorGemsPrepare
-    sourceDir = file('src/docs')
-    sources {
-        include 'index.adoc'
-    }
-    outputDir = new File(buildDir, 'docs')
-
-    asciidoctorj {
-        requires 'rouge'
-        attributes asciidoctorAttributes
-    }
-
-    ebookFormats = ["EPUB3"]
-}
-
-tasks.named("asciidoctor").configure {
-    dependsOn = ['asciidoctorPdf', 'asciidoctorEpub']
 }
 
 tasks.register("docs") {
     group = "documentation"
     dependsOn = ["asciidoctor"]
     doLast {
-        File dir = new File(buildDir, 'docs')
-        ['epub', 'pdf'].each { String ext ->
-            File f = new File(dir, 'index.' + ext)
-            if (f.exists()) {
-                f.renameTo new File(dir, project.name + '.' + ext)
-            }
-        }
-
         new File(buildDir, 'docs/ghpages.html') << file('src/docs/index.tmpl').text.replaceAll('@VERSION@', project.version)
-
         copy {
             from 'src/docs'
             into new File(buildDir, 'docs').path
